refactor: Remove authentication components
